--- a/Password Generator/style.css
+++ b/Password Generator/style.css
@@ -50,3 +50,23 @@ body {
   outline: 0;
   font-size: 24px;
 }
+
+.container button img {
+  width: 28px;
+  margin-right: 10px;
+}
+
+.container button {
+  border: 0;
+  outline: 0;
+  background-color: #019f55;
+  color: white;
+  font-size: 22px;
+  font-weight: 300;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 16px 26px;
+  border-radius: 5px;
+  cursor: pointer;
+}
