--- a/Password Generator/style.css
+++ b/Password Generator/style.css
@@ -69,4 +69,9 @@ body {
   padding: 16px 26px;
   border-radius: 5px;
   cursor: pointer;
+  transition: all ease-in;
+}
+
+.container button:hover {
+  box-shadow: 5px 5px 0px #2f4a5b;
 }
