--- a/QR Generator/styles.css
+++ b/QR Generator/styles.css
@@ -50,6 +50,10 @@ body {
   font-weight: 500;
 }
 
+.container button:hover {
+  box-shadow: 5px 5px 0px #2f4a5b;
+}
+
 #qrcode {
   width: 250px;
   border-radius: 5px;
@@ -87,9 +91,8 @@ body {
   }
 }
 
-
-#error_message{
-    font-weight: 100;
-    font-size: 10px;
-    color: red;
+#error_message {
+  font-weight: 100;
+  font-size: 10px;
+  color: red;
 }
