--- a/Quiz App/style.css
+++ b/Quiz App/style.css
@@ -47,9 +47,23 @@ body {
   text-align: left;
   border-radius: 5px;
   cursor: pointer;
+  transition: all 0.3s;
 }
 
 .btn:hover {
   background-color: #222;
   color: #fff;
+}
+
+#next-btn {
+  background-color: #001e4d;
+  color: #fff;
+  font-weight: 500;
+  width: 150px;
+  border: 0;
+  padding: 10px;
+  margin: 20px auto 0;
+  border-radius: 5px;
+  cursor: pointer;
+  display: none;
 }
