--- a/Weather App/style.css
+++ b/Weather App/style.css
@@ -6,7 +6,9 @@
 }
 
 body {
-  background-color: #222;
+  background: url('images/blurry-gradient.png') center center fixed;
+  background-size: cover;
+  background-color: #222; /* Maintain the existing background color or adjust as needed */
 }
 
 .card {
@@ -48,10 +50,19 @@ body {
   width: 60px;
   height: 60px;
   cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: transform 0.2s; /* Add a transition for the scaling effect */
+}
+
+.search button:active {
+  transform: scale(0.9); /* Scale down to 90% when pressed */
 }
 
 .search button img {
   width: 16px;
+  /* Add any additional styles for the image if needed */
 }
 
 .weather-icon {
