--- a/Quote Generator/style.css
+++ b/Quote Generator/style.css
@@ -46,7 +46,50 @@ body {
   min-height: 110px;
 }
 
-.quote-box blockquote::after,
-.quote-box blockquote::before {
+.quote-box blockquote::before,
+.quote-box blockquote::after {
   content: ' " ';
+}
+
+.quote-box span {
+  display: block;
+  margin-top: 10px;
+  float: right;
+  position: relative;
+}
+
+.quote-box span::before {
+  content: "";
+  width: 20px;
+  height: 2px;
+  background-color: rgb(23, 124, 229);
+  position: absolute;
+  top: 50%;
+  left: -30px;
+}
+
+.quote-box div {
+  width: 100%;
+  margin-top: 50px;
+  display: flex;
+  justify-content: center;
+}
+
+.quote-box button {
+  background-color: rgb(23, 124, 229);
+  color: #fff;
+  border-radius: 25px;
+  border: 1px solid rgb(23, 124, 229);
+  width: 150px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 5px;
+  cursor: pointer;
+}
+
+.quote-box button img {
+  width: 35px;
+  margin-right: 10px;
 }
