--- a/Quote Generator/style.css
+++ b/Quote Generator/style.css
@@ -85,6 +85,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  font-size: 17px;
   margin: 5px;
   cursor: pointer;
 }
@@ -92,4 +93,11 @@ body {
 .quote-box button img {
   width: 35px;
   margin-right: 10px;
+}
+
+.quote-box button:nth-child(2) {
+  background: transparent;
+  color: #333;
+  display: flex;
+  justify-content: center;
 }
