--- a/Age Calculator/style.css
+++ b/Age Calculator/style.css
@@ -54,10 +54,15 @@
   outline: 0;
   padding: 15px 30px;
   border-radius: 5px;
-  font-weight: 500;
+  font-weight: 700;
   color: #333;
   font-size: medium;
   cursor: pointer;
+  transition: all ease-in;
+}
+
+.input-box button:hover {
+  box-shadow: 5px 5px 0px #f7f786;
 }
 
 .input-box input::-webkit-calendar-picker-indicator {
