--- a/Age Calculator/style.css
+++ b/Age Calculator/style.css
@@ -29,8 +29,8 @@
 }
 
 .input-box {
-  margin: 40px 0;
-  padding: 15px;
+  margin: 50px 0;
+  padding: 20px;
   border-radius: 10px;
   background-color: rgba(255, 255, 255, 0.3);
   display: flex;
@@ -62,7 +62,7 @@
 }
 
 .input-box button:hover {
-  box-shadow: 5px 5px 0px #f7f786;
+  box-shadow: 4px 4px 0px #f172ff;
 }
 
 .input-box input::-webkit-calendar-picker-indicator {
