--- a/To-Do/style.css
+++ b/To-Do/style.css
@@ -11,3 +11,18 @@
   padding: 10px;
   background: linear-gradient(135deg, #153677, #4e085f);
 }
+
+.todo-app {
+  width: 100%;
+  max-width: 540px;
+  background-color: #fff;
+  margin: 100px auto 20px;
+  padding: 40px 30px 70px;
+  border-radius: 10px;
+}
+
+.todo-app h2 {
+  color: #002765;
+  display: flex;
+  align-items: center;
+}
