Updated New Buttons

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background: linear-gradient(to right, #7104f5, #00008b);
+  background: linear-gradient(135deg, #7104f5, #030372);
   height: 100vh;
   margin: 0;
   font-family: Arial, sans-serif;
@@ -44,7 +44,7 @@ h1 {
   background-color: #4caf50;
   border: none;
   border-radius: 15px;
-  box-shadow: 0 9px #999;
+  box-shadow: 0 9px #0f4e01;
 }
 
 .button:hover {
