fixed button color

--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ h1 {
   background-color: #4caf50;
   border: none;
   border-radius: 15px;
-  box-shadow: 0 9px #0f4e01;
+  box-shadow: 0 7px #115901;
 }
 
 .button:hover {
