--- a/Dino Sliders/style.css
+++ b/Dino Sliders/style.css
@@ -1,5 +1,35 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
+@keyframes showContent {
+  to{
+    opacity: 1;
+    filter: blur(0);
+    transform: translateY(0);
+  }
+}
+
+@keyframes showImage{
+  to{
+    width: 100%;
+    height: 100%;
+    left: 0;
+    bottom: 0;
+    border-radius: 0;
+  }
+}
+
+@keyframes showThumbnail{
+  to{
+    width: 150px;
+  }
+}
+
+@keyframes transformThumbnail{
+  to{
+    transform: translateX(0);
+  }
+}
+
 body {
   font-family: Poppins, "Helvetica Neue";
   background-color: #000;
@@ -54,4 +84,166 @@ header a {
   max-width: 75%;
   left: 50%;
   transform: translateX(-50%);
+  padding-right: 30%;
+  box-sizing: border-box;
+  color: #fff;
+  text-shadow: 0 5px 10px #0004;
 }
+
+.slider .list .item .content .type {
+  font-weight: bold;
+  letter-spacing: 10px;
+}
+
+.slider .list .item .content .period,
+.slider .list .item .content .name {
+ font-weight: bold; 
+ font-size: 5em;
+ list-style: 1.3em;
+}
+
+.slider .list .item .content .name{
+  color: #f1683a;
+}
+
+.slider .list .item .content .buttons {
+  display: grid;
+  grid-template-columns: repeat(2, 130px);
+  grid-template-rows: 40px;
+  gap: 5px;
+  margin-top: 20px;
+}
+
+.slider .list .item .content button{
+  border: none;
+  border-radius: 3px;
+  background-color: #eee;
+  letter-spacing: 3px;
+  font-family: Poppins;
+  font-weight: 500;
+}
+
+.slider .list .item .content button:nth-child(2){
+  background-color: transparent;
+  color: #eee;
+  border: 1px solid #eee;
+}
+
+.thumbnail{
+  position: absolute;
+  bottom: 50px;
+  left: 50%;
+  width: max-content;
+  z-index: 100;
+  display: flex;
+  gap: 20px;
+}
+
+.thumbnail .item{
+  width: 150px;
+  height: 220px;
+  flex-shrink: 0;
+  position: relative;
+}
+
+.thumbnail .item img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 20px;
+}
+
+.thumbnail .item .content{
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  right: 10px;
+}
+
+
+.thumbnail .item .content .title{
+  font-weight: bold;
+}
+
+.arrows{
+  position: absolute;
+  top: 80%;
+  right: 52%;
+  width: 300px;
+  max-width: 30%;
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.arrows button{
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #eee4;
+  border: none;
+  font-family: monospace;
+  color: #fff;
+  font-weight: bold;
+  font-size: large;
+  transition: .5s;
+  z-index: 100;
+}
+
+.arrows button:hover{
+  background-color: #eee;
+  color: #555;
+}
+
+.slider .list .item:nth-child(1){
+  z-index: 1;
+}
+
+.slider.list.item:nth-child(1) .type,
+.slider.list.item:nth-child(1) .period,
+.slider.list.item:nth-child(1) .name,
+.slider.list.item:nth-child(1) .description,
+.slider.list.item:nth-child(1) .buttons
+{
+  transform: translateY(50px);
+  filter: blur(20px);
+  opacity: 0;
+  animation: showContent 0.5s 1s linear forwards;
+}
+
+.slider.list.item:nth-child(1) .period{
+  animation-delay: 1.2s;
+}
+
+.slider.list.item:nth-child(1) .name{
+  animation-delay: 1.4s;
+}
+
+.slider.list.item:nth-child(1).description{
+  animation-delay: 1.6s;
+}
+
+.slider.list.item:nth-child(1).buttons{
+  animation-delay: 1.8s;
+}
+
+.slider.next .list .item:nth-child(1) img{
+  width: 150px;
+  height: 220px;
+  position: absolute;
+  left: 50%;
+  border-radius: 20px;
+  animation: showImage 0.5s linear 1 forwards;
+}
+
+.slider.next .thumbnail .item:nth-last-child(1){
+  width: 0;
+  overflow: hidden;
+  animation: showThumbnail .5s linear 1 forwards;
+}
+
+.slider.next .thumbnail{
+  transform: translateX(150px);
+  animation: transformThumbnail .5s linear 1 forwards;
+}
+
