--- a/Dino Sliders/style.css
+++ b/Dino Sliders/style.css
@@ -1,84 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-
-
-@media screen and (max-width: 678px) {
-  .slider .list .item .content{
-    padding-right: 0;
-  }
-  .slider .list .item .content .title{
-    font-size: 30px;
-  }
-}
-
-/* Animations */
-@keyframes showContent {
-  to{
-    opacity: 1;
-    filter: blur(0);
-    transform: translateY(0);
-  }
-}
-
-@keyframes showImage{
-  to{
-    width: 100%;
-    height: 100%;
-    left: 0;
-    bottom: 0;
-    border-radius: 0;
-  }
-}
-
-@keyframes showThumbnail{
-  to{
-    width: 150px;
-  }
-}
-
-@keyframes transformThumbnail{
-  to{
-    transform: translateX(0);
-  }
-}
-
-@keyframes outputImage{
-  to{
-    width: 150px;
-    height: 220px;
-    border-radius: 20px;
-    left: 50%;
-    bottom: 50px;
-  }
-}
-
-@keyframes contentOut{
-  to{
-    transform: translateY(150px);
-    filter: blur(20px);
-    opacity: 0;
-  }
-}
-
-@keyframes timeRunning{
-  to{
-    width: 0%;
-  }
-}
-
 body {
-  font-family: Poppins, "Helvetica Neue";
+  margin: 0;
   background-color: #000;
   color: #eee;
-  margin: 0;
+  font-family: Poppins;
   font-size: 12px;
-  overflow: hidden;
 }
-
 a {
-  color: #eee;
   text-decoration: none;
 }
-
 header {
   width: 1140px;
   max-width: 80%;
@@ -89,34 +19,34 @@ header {
   position: relative;
   z-index: 100;
 }
-
 header a {
+  color: #eee;
   margin-right: 40px;
 }
-
-.slider {
-  width: 100vw;
+/* carousel */
+.carousel {
   height: 100vh;
-  overflow: hidden;
   margin-top: -50px;
+  width: 100vw;
+  overflow: hidden;
+  position: relative;
 }
-
-.slider .list .item {
+.carousel .list .item {
+  width: 100%;
+  height: 100%;
   position: absolute;
   inset: 0 0 0 0;
 }
-
-.slider .list .item img {
+.carousel .list .item img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
-
-.slider .list .item .content {
+.carousel .list .item .content {
   position: absolute;
   top: 20%;
   width: 1140px;
-  max-width: 75%;
+  max-width: 80%;
   left: 50%;
   transform: translateX(-50%);
   padding-right: 30%;
@@ -124,47 +54,40 @@ header a {
   color: #fff;
   text-shadow: 0 5px 10px #0004;
 }
-
-.slider .list .item .content .type {
+.carousel .list .item .author {
   font-weight: bold;
   letter-spacing: 10px;
 }
-
-.slider .list .item .content .period,
-.slider .list .item .content .name {
- font-weight: bold; 
- font-size: 5em;
- list-style: 1.3em;
+.carousel .list .item .title,
+.carousel .list .item .topic {
+  font-size: 5em;
+  font-weight: bold;
+  line-height: 1.3em;
 }
-
-.slider .list .item .content .name{
+.carousel .list .item .topic {
   color: #f1683a;
 }
-
-.slider .list .item .content .buttons {
+.carousel .list .item .buttons {
   display: grid;
   grid-template-columns: repeat(2, 130px);
   grid-template-rows: 40px;
   gap: 5px;
   margin-top: 20px;
 }
-
-.slider .list .item .content button{
+.carousel .list .item .buttons button {
   border: none;
-  border-radius: 3px;
   background-color: #eee;
   letter-spacing: 3px;
   font-family: Poppins;
   font-weight: 500;
 }
-
-.slider .list .item .content button:nth-child(2){
+.carousel .list .item .buttons button:nth-child(2) {
   background-color: transparent;
+  border: 1px solid #fff;
   color: #eee;
-  border: 1px solid #eee;
 }
-
-.thumbnail{
+/* thumbail */
+.thumbnail {
   position: absolute;
   bottom: 50px;
   left: 50%;
@@ -173,159 +96,214 @@ header a {
   display: flex;
   gap: 20px;
 }
-
-.thumbnail .item{
+.thumbnail .item {
   width: 150px;
   height: 220px;
   flex-shrink: 0;
   position: relative;
 }
-
-.thumbnail .item img{
+.thumbnail .item img {
   width: 100%;
   height: 100%;
   object-fit: cover;
   border-radius: 20px;
 }
-
-.thumbnail .item .content{
+.thumbnail .item .content {
+  color: #fff;
   position: absolute;
   bottom: 10px;
   left: 10px;
   right: 10px;
 }
-
-
-.thumbnail .item .content .title{
-  font-weight: bold;
+.thumbnail .item .content .title {
+  font-weight: 500;
 }
-
-.arrows{
+.thumbnail .item .content .description {
+  font-weight: 300;
+}
+/* arrows */
+.arrows {
   position: absolute;
   top: 80%;
   right: 52%;
+  z-index: 100;
   width: 300px;
   max-width: 30%;
   display: flex;
   gap: 10px;
   align-items: center;
 }
-
-.arrows button{
+.arrows button {
   width: 40px;
   height: 40px;
   border-radius: 50%;
   background-color: #eee4;
   border: none;
-  font-family: monospace;
   color: #fff;
+  font-family: monospace;
   font-weight: bold;
-  font-size: large;
-  transition: .5s;
-  z-index: 100;
+  transition: 0.5s;
+}
+.arrows button:hover {
+  background-color: #fff;
+  color: #000;
 }
 
-.arrows button:hover{
-  background-color: #eee;
-  color: #555;
-}
-
-.slider .list .item:nth-child(1){
+/* animation */
+.carousel .list .item:nth-child(1) {
   z-index: 1;
 }
 
-.slider.list.item:nth-child(1) .type,
-.slider.list.item:nth-child(1) .period,
-.slider.list.item:nth-child(1) .name,
-.slider.list.item:nth-child(1) .description,
-.slider.list.item:nth-child(1) .buttons
-{
+/* animation text in first item */
+
+.carousel .list .item:nth-child(1) .content .author,
+.carousel .list .item:nth-child(1) .content .title,
+.carousel .list .item:nth-child(1) .content .topic,
+.carousel .list .item:nth-child(1) .content .des,
+.carousel .list .item:nth-child(1) .content .buttons {
   transform: translateY(50px);
   filter: blur(20px);
   opacity: 0;
-  animation: showContent 0.5s 1s linear forwards;
+  animation: showContent 0.5s 1s linear 1 forwards;
 }
-
-.slider.list.item:nth-child(1) .period{
-  animation-delay: 1.2s;
+@keyframes showContent {
+  to {
+    transform: translateY(0px);
+    filter: blur(0px);
+    opacity: 1;
+  }
 }
-
-.slider.list.item:nth-child(1) .name{
-  animation-delay: 1.4s;
+.carousel .list .item:nth-child(1) .content .title {
+  animation-delay: 1.2s !important;
 }
-
-.slider.list.item:nth-child(1).description{
-  animation-delay: 1.6s;
+.carousel .list .item:nth-child(1) .content .topic {
+  animation-delay: 1.4s !important;
 }
-
-.slider.list.item:nth-child(1).buttons{
-  animation-delay: 1.8s;
+.carousel .list .item:nth-child(1) .content .des {
+  animation-delay: 1.6s !important;
 }
-
-.slider.next .list .item:nth-child(1) img{
+.carousel .list .item:nth-child(1) .content .buttons {
+  animation-delay: 1.8s !important;
+}
+/* create animation when next click */
+.carousel.next .list .item:nth-child(1) img {
   width: 150px;
   height: 220px;
   position: absolute;
+  bottom: 50px;
   left: 50%;
-  border-radius: 20px;
+  border-radius: 30px;
   animation: showImage 0.5s linear 1 forwards;
 }
+@keyframes showImage {
+  to {
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 0;
+  }
+}
 
-.slider.next .thumbnail .item:nth-last-child(1){
-  width: 0;
+.carousel.next .thumbnail .item:nth-last-child(1) {
   overflow: hidden;
-  animation: showThumbnail .5s linear 1 forwards;
+  animation: showThumbnail 0.5s linear 1 forwards;
+}
+.carousel.prev .list .item img {
+  z-index: 100;
+}
+@keyframes showThumbnail {
+  from {
+    width: 0;
+    opacity: 0;
+  }
+}
+.carousel.next .thumbnail {
+  animation: effectNext 0.5s linear 1 forwards;
 }
 
-.slider.next .thumbnail{
-  transform: translateX(150px);
-  animation: transformThumbnail .5s linear 1 forwards;
+@keyframes effectNext {
+  from {
+    transform: translateX(150px);
+  }
 }
 
-.slider.prev .list .item:nth-child(2){
+/* running time */
+
+.carousel .time {
+  position: absolute;
+  z-index: 1000;
+  width: 0%;
+  height: 3px;
+  background-color: #f1683a;
+  left: 0;
+  top: 0;
+}
+
+.carousel.next .time,
+.carousel.prev .time {
+  animation: runningTime 3s linear 1 forwards;
+}
+@keyframes runningTime {
+  from {
+    width: 100%;
+  }
+  to {
+    width: 0;
+  }
+}
+
+/* prev click */
+
+.carousel.prev .list .item:nth-child(2) {
   z-index: 2;
 }
 
-.slider.prev .list .item:nth-child(2) img{
+.carousel.prev .list .item:nth-child(2) img {
+  animation: outFrame 0.5s linear 1 forwards;
   position: absolute;
   bottom: 0;
   left: 0;
-  animation: outImage 0.5s linear 1 forwards;
+}
+@keyframes outFrame {
+  to {
+    width: 150px;
+    height: 220px;
+    bottom: 50px;
+    left: 50%;
+    border-radius: 20px;
+  }
 }
 
-.slider.prev .thumbnail .item:nth-child(1){
-  width: 0;
+.carousel.prev .thumbnail .item:nth-child(1) {
   overflow: hidden;
   opacity: 0;
-  animation: showThumbnail .5s linear 1 forwards;
+  animation: showThumbnail 0.5s linear 1 forwards;
 }
-
-.slider.list.item:nth-child(2) .type,
-.slider.list.item:nth-child(2) .period,
-.slider.list.item:nth-child(2) .name,
-.slider.list.item:nth-child(2) .description,
-.slider.list.item:nth-child(2) .buttons
-{
-  animation: contentOut 1.5s linear 1 forwards;
-}
-
-.slider.next .arrows button,
-.slider.prev .arrows button{
+.carousel.next .arrows button,
+.carousel.prev .arrows button {
   pointer-events: none;
 }
-
-.time{
-  width: 0%;
-  height: 5px;
-  background-color: #f1683a;
-  position: absolute;
-  z-index: 100;
-  top: 0;
-  left: 0;
+.carousel.prev .list .item:nth-child(2) .content .author,
+.carousel.prev .list .item:nth-child(2) .content .title,
+.carousel.prev .list .item:nth-child(2) .content .topic,
+.carousel.prev .list .item:nth-child(2) .content .des,
+.carousel.prev .list .item:nth-child(2) .content .buttons {
+  animation: contentOut 1.5s linear 1 forwards !important;
 }
 
-.slider.next .time,
-.slider.prev .time{
-  width: 100%;
-  animation: timeRunning 2s linear 1 forwards;
+@keyframes contentOut {
+  to {
+    transform: translateY(-150px);
+    filter: blur(20px);
+    opacity: 0;
+  }
+}
+@media screen and (max-width: 678px) {
+  .carousel .list .item .content {
+    padding-right: 0;
+  }
+  .carousel .list .item .content .title {
+    font-size: 30px;
+  }
 }
