add meme generator

--- a/Meme Generator/style.css
+++ b/Meme Generator/style.css
@@ -2,6 +2,7 @@
 	font-family: "Roboto", sans-serif;
 	text-align: center;
   background-color: black;
+  height: 98vh;
   color: white;
   border-radius: 20px;
 }
